# DomoticSystem

./: .gitignore  CMakeLists.txt  README.md  appunti.cpp  idee.txt  log.txt
doc/: ex1.txt  ex2.txt  ex3.txt  readme.txt
include/: DomoticDevice.h  DomoticDevice.hpp  DomoticSystem.h  DomoticSystem.hpp  FixedCycleDevice.h  FixedCycleDevice.hpp  Logger.h  ManualDevice.h  ManualDevice.hpp  Time.h  UnifiedLogger.h  class.h
other/: notes.cpp  readme.txt
src/: DomoticDevice.cpp  DomoticSystem.cpp  FixedCycleDevice.cpp  Logger.cpp  ManualDevice.cpp  Time.cpp  UnifiedLogger.cpp  class.cpp  main.cpp
